tests/fixtures/errors/method_arg_type.z
# E0300: an owned String passed by position to a StringView method parameter
# is caught by method-call argument type-checking (walkCallArgsHoist).
main: function is {
    a: "".string
    b: "".string
    a.append b
}
